--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ color: aliceblue;
 }
 
 main{
-background-image:url(../img/capa.jfif);
+background-image:url(../img/banner.jpg);
 background-repeat: no-repeat;
 background-size:cover;
 background-position: center;
