--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,17 @@
-.menu ul{
+
+@import url('https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&display=swap');
+
+
+
+
+
+/*.menu ul{
     display: flex;
     flex-direction: row;
    
     justify-content:space-around;
     padding: 16px; 
-    height: 505px; /*altura(tamanho)*/
+    height: 505px; altura(tamanho)
 color: aliceblue;
 }
 
@@ -28,4 +35,94 @@ right: 0;
 bottom: 0;
 background-color: rgba(50, 50, 50, 0.5);
 z-index: 1;
+}*/
+
+body {
+    font-family: "Afacad", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    z-index: 10;
+}
+
+.menu, .auth {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    display: flex;
+
+}
+
+.menu a, .auth a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.search {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.search select, .search input {
+    padding: 5px;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+}
+
+.hero {
+    height: 100vh;
+    background: url(../img/banner.jpg) no-repeat center center/cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+
+.hero h1 {
+    font-size: 2.5em;
+    margin-bottom: 10px;
+}
+
+.hero p {
+    max-width: 600px;
+    font-size: 1.2em;
+    line-height: 1.6;
+}
+
+.menuzinho{
+    display: flex;
+    justify-content: space-between;
+}
+
+.site{
+    max-width: 930px;
+    width: 100%;
+    margin: 0 auto;
+    
+}
+
+.menu, .auth{
+    gap: 100px;
+}
+
+.search{
+    gap: 30px;
 }
