--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 color: aliceblue;
 }
 
-main{
+.homeMain{
 background-image:url(../img/banner.jpg);
 background-repeat: no-repeat;
 background-size:cover;
@@ -19,7 +19,7 @@ background-color: black;
 
 }
 
-main::before{
+.homeMain::before{
     content: '';
     position: absolute;
     top: 0;
@@ -30,14 +30,7 @@ background-color: rgba(50, 50, 50, 0.5);
 z-index: 1;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-}
-
-body {
+.loginBody {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -313,4 +306,94 @@ form input {
 
 .formulario-matarazzo .next-btn:hover {
     background-color: #155bb5;
+}
+
+.footer {
+    background-color: #2b2b2b;
+    padding: 20px;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+}
+
+.footerNewsletter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.footerInputEmail {
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px 0 0 5px;
+    width: 300px;
+}
+
+.footerButton {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #ffffff;
+    font-size: 16px;
+    border: none;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+}
+
+.footerSections {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.footerColumn h4 {
+    margin-bottom: 10px;
+}
+
+.footerColumn ul {
+    list-style: none;
+}
+
+.footerColumn ul li {
+    margin: 5px 0;
+}
+
+.footerColumn ul li a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.footerColumn ul li a:hover {
+    text-decoration: underline;
+}
+
+.footerVideo {
+    width: 300px;
+    height: auto;
+}
+
+.footerSocial {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.footerSocialIcon img {
+    width: 30px;
+    height: 30px;
+    margin: 0 10px;
+}
+
+.footerPrivacy {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.footerPrivacy a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.footerPrivacy a:hover {
+    text-decoration: underline;
 }
