--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,55 +1,20 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&display=swap');
 
-
-
-
-
-/*.menu ul{
-    display: flex;
-    flex-direction: row;
-   
-    justify-content:space-around;
-    padding: 16px; 
-    height: 505px; altura(tamanho)
-color: aliceblue;
-}
-
-main{
-background-image:url(../img/banner.jpg);
-background-repeat: no-repeat;
-background-size:cover;
-background-position: center;
-width: 100%;
-height: 100vh;
-background-color: black;
-
-}
-
-main::before{
-    content: '';
-    position: absolute;
-    top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-background-color: rgba(50, 50, 50, 0.5);
-z-index: 1;
-}*/
-
 body {
-    font-family: "Afacad", sans-serif;
+    
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: weight;
   font-style: normal;
+  padding-top: 20px; 
 }
 
-header {
+.indexHeader {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
-    background-color: rgba(0, 0, 0, 0.5);
+    padding: 40px 0;
+   
     color: white;
     position: absolute;
     width: 100%;
@@ -69,6 +34,7 @@ header {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    font-family: "Afacad", sans-serif;
 }
 
 .search {
