--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Anton+SC&display=swap');
+
 .menu ul{
     display: flex;
     flex-direction: row;
@@ -55,18 +58,32 @@ z-index: 1;
     align-items: center;
     justify-content: center;
     padding: 20px;
-    color: #1a73e8;
+    color: #0000FF;
+    padding-bottom: 76px;
 }
 
+
 .logo {
-    width: 50px;
-    height: 50px;
+    width: 55px;
+    height: 55px;
     margin-bottom: 20px;
+    position: relative;
+    top: -79px;
+    left: -171px;
 }
 
 .left-panel h1 {
-    font-size: 36px;
+    font-size: 3em;
     font-weight: bold;
+    color: #0000FF;
+    font-family: "Anton SC", sans-serif;
+}
+
+.linha{
+    height: 1px;
+    width: 250px;
+    background-color: #0000FF;
+    margin: 10px 0;
 }
 
 .left-panel p {
@@ -75,21 +92,21 @@ z-index: 1;
 }
 
 .consultas-exames-btn {
-    background-color: #1a73e8;
+    background-color: #0000FF;
     color: #ffffff;
     border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
+    padding: 10px 36px;
+    border-radius: 14px;
     font-size: 16px;
     cursor: pointer;
+    font-family: "Afacad", sans-serif;
 }
-
 .consultas-exames-btn:hover {
-    background-color: #155bb5;
+    background-color: #0000FF;
 }
 
 .right-panel {
-    background-color: #1a73e8;
+    background-color: #007BFF;
     width: 50%;
     display: flex;
     align-items: center;
@@ -397,3 +414,23 @@ form input {
 .footerPrivacy a:hover {
     text-decoration: underline;
 }
+
+.quarter-circle {
+    width: 200px; /* Diâmetro do círculo */
+    height: 200px; /* Diâmetro do círculo */
+    background-color:  #0000FF;
+    clip-path: circle(44.4% at 0 100%); /* Polígono para o quadrante inferior esquerdo */
+    position: absolute; /* Para posicionar corretamente */
+    left: 0; /* Alinha à esquerda */
+    bottom: 0; /* Alinha na parte inferior */
+}
+
+.boleta {
+    width: 200px; /* Diâmetro do círculo */
+    height: 200px; /* Diâmetro do círculo */
+    background-color: #0000FF;
+    clip-path: circle(42.6% at 90% 0);    /* Polígono para o quadrante superior direito */
+    position: absolute; /* Para posicionar corretamente */
+    right: 0; /* Alinha à direita */
+    top: 0; /* Alinha na parte superior */
+} 
