--- a/assets/css/2style.css
+++ b/assets/css/2style.css
@@ -24,11 +24,12 @@ body {
     background-color: #0073FF;
     padding: 30px;
     border-radius: 15px;
-    width: 550px;
+    width: 600px;
     color: white;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     position: relative;
     z-index: 1;
+    height: 480px; /* mudar a altura*/
 }
 
 .form h2 {
