--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,4 +95,20 @@ body {
 
 /*parte do endereco*/
 
-
+.item{
+    width: 200px;
+    height: 300px;
+    list-style-type: none;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
+    background-position: center;
+    background-size: cover;
+    border-radius: 20px;
+    box-shadow: 0 20px 30px rgba(255, 255, 255, 0.3) inset;
+ left: 0;
+ top: 0;
+ width: 100%;
+ height: 100%;                                                  
+}
