--- a/assets/css/agendamento.css
+++ b/assets/css/agendamento.css
@@ -1,12 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
+    font-family: "Afacad", sans-serif!important;
+    font-size: 20px;
 }
 
 body {
-    background-color: #e0e0e0;
+    background-color: #999;
 }
 
 header {
@@ -17,32 +20,39 @@ header {
     padding: 10px 20px;
 }
 
-main{
-    margin: 30px 0 0 0;
+.topo{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-.logo {
+
+.topo img{
+    width: 40px;
+}
+
+.topo div:nth-child(1) a div{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.topo div:nth-child(3){
+    width: 100px;
+    height: 50px;
+}
+
+
+
+.logo a{
     display: flex;
     align-items: center;
     font-size: 18px;
     font-weight: bold;
 }
 
-.logo-icon {
-    width: 40px;
-    height: 40px;
-    background-color: #2c5da8;
-    border-radius: 50%;
-    margin-right: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.logo-icon::before {
-    content: '👓';
-    font-size: 20px;
-    color: white;
+.logo img{
+    width: 50px;
 }
 
 .search-bar {
@@ -56,7 +66,15 @@ main{
     font-size: 16px;
 }
 
-.auth-buttons button {
+.btnEntrar {
+    padding: 5px 10px;
+    font-size: 16px;
+    border: 1px solid transparent;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.btnCadastrar {
     padding: 5px 10px;
     font-size: 16px;
     border: 1px solid #000;
@@ -64,10 +82,16 @@ main{
     cursor: pointer;
 }
 
+main{
+    margin-top: 1%;
+}
+
+h2{
+    font-size: 2em;
+}
+
 .agendamento-container {
     width: 1200px;
-    max-width: 90%;
-    height: 675px;
 }
 
 .calendar-wrapper {
@@ -107,15 +131,12 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 2rem;
 }
 
 .calendar {
     border: 1px solid #dee2e6;
     border-radius: 0.25rem;
     overflow: hidden;
-    max-width: 600px;
-    width: 100%;
 }
 
 .calendar-header {
@@ -127,7 +148,7 @@ main{
 .calendar-body {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-auto-rows: 75px;
+    grid-auto-rows: 45px;
     gap: 1px;
 }
 
@@ -168,6 +189,13 @@ main{
     font-weight: bold;
 }
 
+.tamanhoHorario{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .horario-btn {
     width: 60px;
     padding: 10px;
@@ -188,10 +216,22 @@ main{
     gap: 1rem !important;
 }
 
-.horarios{
-    padding-top: 200px;
-}
-
 .align-items-center{
     align-items: baseline!important;
+}
+
+.vh-100 {
+    height: auto !important;
+}
+
+.btnAgendar{
+    margin-top: 30px;
+}
+
+.btnAgendar a{
+    padding: 10px;
+    color: white;
+    background-color: #202020;
+    border-radius: 5px;
+    text-align: center;
 }
