--- a/assets/css/agendamento.css
+++ b/assets/css/agendamento.css
@@ -251,3 +251,49 @@ h2{
     border-radius: 5px;
     text-align: center;
 }
+
+/* Estilos do Popup */
+#popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+#popup:target {
+    display: flex;
+}
+
+.popup-content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    width: 300px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20%;
+}
+
+.popup-content h2 {
+    margin: 0 0 10px;
+    font-size: 18px;
+}
+
+.popup-content a {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+.popup-content a:hover {
+    background-color: #0056b3;
+}
