--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -116,14 +116,13 @@ z-index: 1;
 }
 
 .login-form {
-    width: 80%;
+    width: 100%;
     max-width: 300px;
     text-align: center;
 }
 
 .user-icon img {
     width: 60px;
-    height: 60px;
     border-radius: 50%;
     margin-bottom: 20px;
 }
@@ -138,21 +137,22 @@ form label {
 form input {
     width: 100%;
     padding: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     border: none;
-    border-radius: 4px;
+    border-radius: 40px;
 }
 
 .google-login-btn {
     background-color: #ffffff;
     color: #1a73e8;
     padding: 10px;
-    width: 100%;
+    width: 70%;
     border: none;
-    border-radius: 4px;
+    border-radius: 40px;
     font-size: 14px;
     cursor: pointer;
-    margin-bottom: 10px;
+    margin: 25px;
+    align-items: center;
 }
 
 .google-login-btn:hover {
@@ -167,6 +167,10 @@ form input {
 
 .register-link:hover {
     text-decoration: underline;
+}
+
+.register-link img {
+    width: 10px;
 }
 
 .formulario-matarazzo * {
@@ -434,3 +438,7 @@ form input {
     right: 0; /* Alinha à direita */
     top: 0; /* Alinha na parte superior */
 } 
+
+.logingoogle img{
+    width: 15px;
+}
