--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton+SC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Anton+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&display=swap');
+
+body{
+    font-family: "Afacad", sans-serif !important;
+}
 
 .menu ul{
     display: flex;
